tests/snapshots/integration__integration_tests__user_hooks__user_pre_remove_failure.snap
---
source: tests/integration_tests/user_hooks.rs
info:
  program: wt
  args:
    - remove
    - feature
    - "--force-delete"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[36m◎[39m [36mRunning user pre-remove [1mblock[22m:[39m
[107m [0m [2m[0m[2m[34mexit[0m[2m 1
[0m[31m✗[39m [31mpre-remove command failed: [1mblock[22m: exit status: 1[39m
[2m↳[22m [2mTo skip pre-remove hooks, re-run with [90m--no-verify[39m[22m
